add localization for UIDashboard

--- a/plugins/org.jkiss.dbeaver.ui.dashboard/src/org/jkiss/dbeaver/ui/dashboard/internal/UIDashboardMessages.properties
+++ b/plugins/org.jkiss.dbeaver.ui.dashboard/src/org/jkiss/dbeaver/ui/dashboard/internal/UIDashboardMessages.properties
@@ -1,2 +1,118 @@
+
+add_dialog_dashboards_button_add = add
+
+add_dialog_dashboards_button_manage = manage ...
+
+add_dialog_dashboards_dialog_add = Dashboard [
+
+add_dialog_dashboards_message_no_more_dashboards = No more dashboards for 
+
+add_dialog_dashboards_table_description = Description
+
+add_dialog_dashboards_table_name = Name
+
+add_dialog_dashboards_title = Add Dashboard
+
+config_dialog_dashboards_bracket = ]
+
+config_dialog_dashboards_button_configuration = Configuration
+
+config_dialog_dashboards_button_queries = SQL Queries ...
+
+config_dialog_dashboards_context = Dashboard read queries
+
+config_dialog_dashboards_group_info = Dashboard info
+
+config_dialog_dashboards_group_update = Dashboard update
+
+config_dialog_dashboards_group_view = Dashboard view
+
+config_dialog_dashboards_label_description = Description
+
+config_dialog_dashboards_label_domain = Show domain axis
+
+config_dialog_dashboards_label_grid = Show grid
+
+config_dialog_dashboards_label_items = Maximum items
+
+config_dialog_dashboards_label_legend = Show legend
+
+config_dialog_dashboards_label_name = Name
+
+config_dialog_dashboards_label_range = Show range asix
+
+config_dialog_dashboards_label_tip_domain = Show domain (horizontal) axis
+
+config_dialog_dashboards_label_tip_grid = Show dashboard grid
+
+config_dialog_dashboards_label_tip_legend = Show dashboard chart legend
+
+config_dialog_dashboards_label_tip_range = Show range (vertical) axis
+
+config_dialog_dashboards_label_tip_view = Dashboard view
+
+config_dialog_dashboards_label_update = Update period (ms)
+
+config_dialog_dashboards_label_view = View
+
+config_dialog_dashboards_title = Dashboard [
+
+edit_dialog_dashboards_bracket = ]
+
+edit_dialog_dashboards_button_select = Select
+
+edit_dialog_dashboards_descriptor_keys = Map keys: 
+
+edit_dialog_dashboards_descriptor_labels = Map labels: 
+
+edit_dialog_dashboards_group_main = Main info
+
+edit_dialog_dashboards_group_queries = Queries
+
+edit_dialog_dashboards_group_rendering = Rendering
+
+edit_dialog_dashboards_label_ID = ID
+
+edit_dialog_dashboards_label_calc_type = Calc type
+
+edit_dialog_dashboards_label_data_type = Data type
+
+edit_dialog_dashboards_label_database = Database
+
+edit_dialog_dashboards_label_description = Description
+
+edit_dialog_dashboards_label_fetch_type = Fetch type
+
+edit_dialog_dashboards_label_info_main = Predefined dashboards are read-only. But you can copy them.
+
+edit_dialog_dashboards_label_info_queries = Use blank line as query separator
+
+edit_dialog_dashboards_label_interval = Interval
+
+edit_dialog_dashboards_label_maximum_items = Maximum items
+
+edit_dialog_dashboards_label_name = Name
+
+edit_dialog_dashboards_label_tip_calc_type = Value calculation type
+
+edit_dialog_dashboards_label_tip_data_type = Type of data for this dashboard
+
+edit_dialog_dashboards_label_tip_fetch_type = Values fetch type
+
+edit_dialog_dashboards_label_tip_interval = Values interval
+
+edit_dialog_dashboards_label_tip_value_type = Type of values
+
+edit_dialog_dashboards_label_tip_view = Dashboard view
+
+edit_dialog_dashboards_label_update_period = Update period (ms)
+
+edit_dialog_dashboards_label_value_type = Value type
+
+edit_dialog_dashboards_label_view = Default view
+
+edit_dialog_dashboards_title = Dashboard [
+
 pref_page_dashboards_group_common = Dashboards
+
 pref_page_dashboards_open_separate_connection_label = Open separate connection
